--- a/customs/layouts/shortcodes/gdocs.html
+++ b/customs/layouts/shortcodes/gdocs.html
@@ -1,11 +1,3 @@
 <div class="responsive-wrap">
-<<<<<<< HEAD
-<<<<<<< HEAD
-  <iframe src="{{ .Get "src" }}" frameborder="0" width="960" height="960" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
-=======
-  <iframe src="{{ .Get "src" }}" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
->>>>>>> f3564cb4857ce369836db0793180c74731a0885e
-=======
-  <iframe src="{{ .Get "src" }}" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
->>>>>>> f3564cb4857ce369836db0793180c74731a0885e
+  <iframe src="{{ .Get "src" }}" frameborder="0" width="960" height="800" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true" style="margin-left:20%; margin-top:3rem;"></iframe>
 </div>
