--- a/customs/assets/scss/custom.scss
+++ b/customs/assets/scss/custom.scss
@@ -27,9 +27,9 @@ $gray-800: #343a40 !default;
 $gray-900: #212529 !default;
 $black: #000 !default;
 
-$color-link: #003366 !default;
+$color-link:  rgb(63, 105, 170) !default;
 $color-visited-link: #006690 !default;
-$color-hover: #E32934 !default;
+$color-hover: #fc6f5c !default;
 
 $body-background: #F5F5F5 !default;
 $body-font-color: #202020 !default;
@@ -145,16 +145,16 @@ $hint-colors: (
 
   .book-expand-head {
     background-color: $gray-200;
-    color: #003366;
+    color:  rgb(63, 105, 170);
     padding: $padding-8 $padding-16;
     font-weight: bolder;
     cursor: pointer;
-    border: $padding-1 solid #E32934;
+    border: $padding-1 solid #fc6f5c;
 
     &:hover {
-      background-color: #003366;
+      background-color:  rgb(63, 105, 170);
       color: white;
-      border: $padding-1 solid #E32934;
+      border: $padding-1 solid #fc6f5c;
     }
   }
 
@@ -175,7 +175,7 @@ $hint-colors: (
 
   border: $padding-2 solid $gray-400;
   border-radius: $border-radius;
-
+  
   overflow: hidden;
   display: flex;
   flex-wrap: wrap;
@@ -186,20 +186,21 @@ $hint-colors: (
 
     // border-bottom: $padding-1 transparent;
     cursor: pointer;
-    background-color: $gray-200;
-    font-weight: 600;
+    background-color: rgba(63, 105, 170,.3);
+    font-weight: 400;
     border: $padding-2 solid $gray-400;
     //border-bottom: $padding-2 solid red;
     //border-right: $padding-4 solid white;
-    color: #003366;
+  
     // border-bottom: $padding-4 solid #003366;
 
 
     &:hover {
-      color: $gray-200;
-      background-color: #003366;
+      
+      background-color: rgba(63, 105, 170,.6);
       font-weight: 600;
-      border-bottom: $padding-4 solid #FF6600;
+      
+      border-bottom: $padding-4 solid #fc6f5c;
     }
 
   }
@@ -214,9 +215,9 @@ $hint-colors: (
   }
 
   input[type="radio"]:checked+label {
-    border-bottom: $padding-4 solid #FF6600;
-    color: $gray-200;
-    background-color: #003366;
+    border-bottom: $padding-4 solid #fc6f5c;
+    
+    background-color: rgba(63, 105, 170,.6);
     font-weight: 600;
 
   }
@@ -242,7 +243,7 @@ $hint-colors: (
 // {{< button >}}
 a.book-btn {
   display: inline-block;
-  color: #FF6600;
+  color: #fc6f5c;
   text-decoration: none !important;
   border: $padding-2 solid $color-link;
   border-radius: $border-radius;
@@ -255,7 +256,7 @@ a.book-btn {
 
   &:hover {
     color: white !important;
-    background-color: #FF6600;
+    background-color: #fc6f5c;
 
 
   }
