--- a/customs/assets/scss/academic/_root.scss
+++ b/customs/assets/scss/academic/_root.scss
@@ -3,8 +3,8 @@
  **************************************************/
 
 html {
-  font-family: $sta-font-body, sans-serif;
-  font-size: #{$sta-font-size-small}px;
+  font-family: Sarabun;
+  font-size: #{$sta-font-size}px;
   color: rgba(0,0,0,0.8);
   line-height: 1.65;
 }
@@ -15,8 +15,8 @@ html {
 }
 
 body {
-  font-family: inherit;
-  font-size: .9rem;
+  font-family: Sarabun;
+  font-size: 1rem;
   line-height: inherit;
   color: inherit;
   background-color: $sta-background;
@@ -108,6 +108,10 @@ h3.article-title a:hover {
   transition: color 0.6s ease;
 }
 
+em {
+  background-color: #FFFF99;
+  font-weight: 600;
+}
 a:hover,
 a:focus {
   color: $sta-link-hover;
@@ -539,6 +543,116 @@ table > tbody > tr:hover > th {
   background-color: #e5e5e5;
 }
 
+/*************************************************
+ *  Alerts
+ **************************************************/
+
+
+/* Style asides as Bootstrap alerts. */
+.article-style aside {
+  @extend .alert;
+}
+
+/* Asides use <p> block element whereas alerts use <div>. */
+.article-style aside p,
+div.alert > div {
+  position: relative;
+  display: block;
+  font-size: 1rem;
+  margin-left: 2rem;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+
+
+div.alert div > * {
+  margin-bottom: .5rem;  /* Use smaller paragraph spacing than usual. */
+}
+
+div.alert div > :last-child {
+  margin-bottom: 0;
+}
+
+.article-style aside p::before,
+div.alert > div:first-child::before {
+  position: absolute;
+  top: -0.5rem;
+  left: -2rem;
+  font-size: 1.5rem;
+
+  width: 1.5rem;
+  text-align: center;
+}
+
+
+
+div.alert-warning > div:first-child::before {
+  font-family: 'Font Awesome 5 Free';
+  font-weight: 900;
+  color: orange;
+  content: '\f06a';
+}
+div.alert-danger > div:first-child::before {
+  font-family: 'Font Awesome 5 Free';
+  font-weight: 900;
+  color: #cd0930;
+  content: '\f071';
+}
+
+div.alert-success > div:first-child::before {
+  font-family: 'Font Awesome 5 Free';
+  font-weight: 900;
+  content: '\f058';
+  color: green;
+}
+div.alert-info > div:first-child::before {
+  font-family: 'Font Awesome 5 Free';
+  font-weight: 900;
+  content: '\f05a';
+  color: #003366;
+}
+
+
+.article-style aside a,
+div.alert a {
+  color: currentColor;
+  text-decoration: none;
+  border-bottom: solid 2px currentColor;
+}
+
+.article-style aside,
+.alert-note {
+
+  background-color: #f6fbfe;
+  border-color: #209cee;
+}
+
+.alert-info {
+  background-color:rgba(89, 169, 250, 0.2);
+  border-color: #003366;
+  color:currentColor;
+  font-weight: 600;
+}
+.alert-success {
+
+  background-color: #f6fbfe;
+  border-color: green;
+}
+
+.alert-warning {
+  background-color: rgba(255, 153, 0,0.25);
+  border-color: rgb(255, 153, 0);
+  color:currentColor;
+  font-weight: 600;
+}
+.alert-danger {
+
+  background-color: rgba(255, 56, 96,0.15);
+  border-color: rgb(255, 56, 96);
+  color:currentColor;
+  font-weight: 600;
+}
 
 .article-style aside p,
 div.alert-quotes > div {
