--- a/customs/assets/scss/academic/_root.scss
+++ b/customs/assets/scss/academic/_root.scss
@@ -3,8 +3,8 @@
  **************************************************/
 
 html {
-  font-family: Sarabun;
-  font-size: #{$sta-font-size}px;
+  font-family: $sta-font-body, sans-serif;
+  font-size: #{$sta-font-size-small}px;
   color: rgba(0,0,0,0.8);
   line-height: 1.65;
 }
@@ -15,8 +15,8 @@ html {
 }
 
 body {
-  font-family: Sarabun;
-  font-size: 1rem;
+  font-family: inherit;
+  font-size: .9rem;
   line-height: inherit;
   color: inherit;
   background-color: $sta-background;
@@ -31,7 +31,7 @@ body {
 }
 
 .max-width-640 {
-  max-width: 85%;
+  max-width: 640px;
 }
 
 .margin-auto {
@@ -108,10 +108,6 @@ h3.article-title a:hover {
   transition: color 0.6s ease;
 }
 
-em {
-  background-color: #FFFF99;
-  font-weight: 600;
-}
 a:hover,
 a:focus {
   color: $sta-link-hover;
@@ -164,7 +160,7 @@ figcaption h4 {
 pre,
 code {
   font-family: $sta-font-mono, monospace;
-  color: #fc6f5c;
+  color: #c7254e;
   background-color: #f9f2f4;
 }
 
@@ -226,12 +222,12 @@ blockquote p:last-child {
   padding-right: 1rem;
   padding-left: 1rem;
   padding-top: 0.1rem;
-  max-width: 85%;
+  width: 100%;
 }
 
 @media only screen and (min-width: 1001px) {
   .universal-wrapper {
-     max-width: 85%;
+    width: 1000px;
   }
 }
 
@@ -334,7 +330,7 @@ a[data-fancybox] {
 }
 
 .post-nav-item .meta-nav {
-  color:  rgb(63, 105, 170);
+  color: #003366;
   font-weight: 700;
   line-height: 2;
   text-transform: uppercase;
@@ -506,7 +502,7 @@ table > tfoot > tr > td {
   padding: 8px;
   line-height: 1.43;
   vertical-align: top;
-  border: 1px solid #ddd;
+  border-top: 1px solid #ddd;
 }
 
 table > thead > tr > th {
@@ -520,7 +516,7 @@ table > thead:first-child > tr:first-child > th,
 table > caption + thead > tr:first-child > td,
 table > colgroup + thead > tr:first-child > td,
 table > thead:first-child > tr:first-child > td {
-  border-top: 1;
+  border-top: 0;
 }
 
 table > tbody + tbody {
@@ -670,8 +666,6 @@ div.alert-quotes > div {
   border-left: .45rem solid #003366;
  /* background: rgba(0, 51, 102, 0.075); */
 }
-
-
 
 /* homepage */
 .hero-img{
