--- a/customs/assets/scss/bootstrap_variables.scss
+++ b/customs/assets/scss/bootstrap_variables.scss
@@ -18,6 +18,7 @@ $navbar-brand-font-size: 1.2rem;
 
 $navbar-light-color: $sta-menu-text;
 $navbar-light-active-color: $sta-menu-text-active;
-$navbar-light-brand-color: $sta-menu-title;
-$navbar-light-brand-hover-color: $navbar-light-active-color;
+$navbar-light-brand-font-size: 1.5rem;
+$navbar-light-brand-color: $sta-primary;
+$navbar-light-brand-hover-color: #3F69AA;
 $navbar-light-toggler-border-color: transparent;
