--- a/customs/layouts/partials/docs_layout.html
+++ b/customs/layouts/partials/docs_layout.html
@@ -11,14 +11,28 @@
       <ul class="nav toc-top">
         <li><a href="#" id="back_to_top" class="docs-toc-title">{{ i18n "on_this_page" }}</a></li>
       </ul>
+     
 
       {{ .TableOfContents }}
 
-      {{ partial "docs_toc_foot" . }}
+      
     </div>
     {{ end }}
 
     <main class="col-12 col-md-9 col-xl-8 py-md-3 pl-md-5 docs-content" role="main">
+
+      {{ if .Params.page_toc }}
+    <div class="d-none d-xl-block col-xl-2 docs-toc">
+      <ul class="nav toc-top">
+        <li><a href="#" id="back_to_top" class="docs-toc-title">{{ i18n "on_this_page" }}</a></li>
+      </ul>
+     
+
+      {{ .TableOfContents }}
+
+      
+    </div>
+    {{ end }}
 
       <article class="article">
 
@@ -26,6 +40,7 @@
           <h1>{{ .Title }}</h1>
 
           <div class="article-style">
+           
             {{ .Content }}
           </div>
 
