--- a/customs/assets/scss/academic/_nav.scss
+++ b/customs/assets/scss/academic/_nav.scss
@@ -45,7 +45,7 @@
       &.active,
       &:hover,
       &:focus {
-        color: $sta-menu-text;
+        color: $sta-menu-text-active;
       }
 
       &.active {
@@ -116,91 +116,12 @@
   padding-bottom: 5px;
   font-weight: bold;
   position: relative;
+  
   z-index: 1030;  // For z-index clickable mobile logo.
 }
 
-// Dynamically fit logo image to space available.
-// No need to explicitly set a size for each breakpoint.
-// See https://caniuse.com/#feat=mdn-css_properties_width_stretch .
-.navbar-brand img {
-  width: auto;
-  height: -moz-available;
-  height: -webkit-fill-available;
-  height: -webkit-stretch;
-  height: stretch;
-  max-height: 60px;  // For lg+ responsive sizing. 60px height +10px v-padding = 70px
-  max-width: fit-content;  // Must override default responsive image style.
-}
-
-#navbar-main .main-menu-item ul li .nav-link {
-  color: $sta-menu-text;
-}
-
-@include media-breakpoint-down(md) {
-  // Used in conjunction with mobile .navbar-brand to center logo on mobile.
-  .navbar-brand-mobile-wrapper {
-    position: absolute;
-    left: 0;
-    right: 0;
-  }
-  .navbar-brand {
-    // Center logo in mobile navbar.
-    margin: 0 auto;
-  }
-  .navbar-brand img {
-    max-height: 40px;  // 40px height + 10px v-padding = 50px.
-  }
-  .navbar-toggler {
-    border-color: transparent;  // Remove Bootstrap's border from Toggle button.
-  }
-  #navbar-main .main-menu-item {
-    text-align: left !important;
-    padding-left: 0;
-  }
-  .navbar-collapse {
-    z-index: 1031 !important;  // Appear just over navbar.
-    position: absolute;
-    left: 0;
-    top: 50px;
-    width: 100%;
-    background-color: $sta-menu-primary;
-    text-align: center !important;
-  }
-  #navbar-main .main-menu-item .nav-item {
-    padding: 10px 15px !important;
-  }
-  #navbar-main .main-menu-item .nav-item .nav-link {
-    padding: 5px 15px !important;
-  }
-}
-
-ul.nav-icons {
-  list-style-type: none;
-  font-size: 18px;
-  padding: 0.5rem 0 0.5rem 0;
-  margin: 0;
-}
-
-ul.nav-icons li {
-  display: inline;
-  padding-right: 1rem;
-}
-
-ul.nav-icons li:last-of-type {
-  padding-right: 0;
-}
-
-ul.nav-icons li.nav-item a.nav-link {
-  padding: 0;
-}
-
-.dropdown-menu {
-  background-color: $sta-menu-primary !important;
-  color: $sta-menu-text !important;
-  z-index: 1032;  // I18n dropdown over mobile expanded menu.
-}
-
-.dropdown-item {
-  background-color: $sta-menu-primary !important;
-  color: $sta-menu-text !important;
+a.navbar-brand {
+  color: red;
+  font-size:120%;
+  
 }
