--- a/customs/assets/scss/academic/_root.scss
+++ b/customs/assets/scss/academic/_root.scss
@@ -84,7 +84,7 @@ h1, h2, h3, h4, h5, h6 {
   hyphens: manual;
 }
 h1 {
-  font-size: 2rem;
+  font-size: 1.8rem;
 }
 h2 {
   margin-top: 1rem;
@@ -111,6 +111,11 @@ h3.article-title a:hover {
 a:hover,
 a:focus {
   color: $sta-link-hover;
+}
+
+em {
+  background-color: #FFFF99;
+  font-weight: bolder;
 }
 
 img,
@@ -501,13 +506,15 @@ table > tbody > tr > td,
 table > tfoot > tr > td {
   padding: 8px;
   line-height: 1.43;
-  vertical-align: top;
-  border-top: 1px solid #ddd;
+  vertical-align: middle;
+  border: 1px solid #ddd;
 }
 
 table > thead > tr > th {
-  vertical-align: bottom;
-  border-bottom: 2px solid #ddd;
+  vertical-align: center;
+  border: 2px solid #ddd;
+  background-color: #e5e5e5;
+  text-align: center;
 }
 
 table > caption + thead > tr:first-child > th,
@@ -516,11 +523,11 @@ table > thead:first-child > tr:first-child > th,
 table > caption + thead > tr:first-child > td,
 table > colgroup + thead > tr:first-child > td,
 table > thead:first-child > tr:first-child > td {
-  border-top: 0;
+ 
 }
 
 table > tbody + tbody {
-  border-top: 2px solid #ddd;
+  border: 2px solid #ddd;
 }
 
 table table {
@@ -573,24 +580,26 @@ div.alert div > :last-child {
 .article-style aside p::before,
 div.alert > div:first-child::before {
   position: absolute;
-  top: -0.5rem;
+  
   left: -2rem;
-  font-size: 1.5rem;
-
+  
   width: 1.5rem;
   text-align: center;
+  vertical-align: middle;
 }
 
 
 
 div.alert-warning > div:first-child::before {
   font-family: 'Font Awesome 5 Free';
+  font-size: 120%;
   font-weight: 900;
   color: orange;
   content: '\f06a';
 }
 div.alert-danger > div:first-child::before {
   font-family: 'Font Awesome 5 Free';
+  font-size: 120%;
   font-weight: 900;
   color: #cd0930;
   content: '\f071';
@@ -598,6 +607,7 @@ div.alert-danger > div:first-child::before {
 
 div.alert-success > div:first-child::before {
   font-family: 'Font Awesome 5 Free';
+  font-size: 120%;
   font-weight: 900;
   content: '\f058';
   color: green;
@@ -606,7 +616,7 @@ div.alert-info > div:first-child::before {
   font-family: 'Font Awesome 5 Free';
   font-weight: 900;
   content: '\f05a';
-  color: #003366;
+  color: rgb(63, 105, 170);
 }
 
 
@@ -620,34 +630,66 @@ div.alert a {
 .article-style aside,
 .alert-note {
 
-  background-color: #f6fbfe;
-  border-color: #209cee;
+  background-color:rgba(47, 101, 182, 0.05);
+  border-color: rgb(63, 105, 170);
+  padding: 0 auto;
 }
 
 .alert-info {
-  background-color:rgba(89, 169, 250, 0.2);
-  border-color: #003366;
+  background-color:rgba(63, 105, 170,0.1);
+  border-color: rgb(63, 105, 170);
   color:currentColor;
-  font-weight: 600;
+  padding: 0 auto;
 }
 .alert-success {
 
-  background-color: #f6fbfe;
-  border-color: green;
+  background-color: rgba(0, 128, 0,0.1);
+  border-color: rgb(0, 128, 0);
+  padding: 0 auto;
+
+}
+
+.alert-note_success {
+  background-color: rgba(0, 128, 0,0.1);
+  border-color: rgb(0, 128, 0);
+  color:currentColor;
+  padding: 0 auto;
+  
+}
+
+.alert-note_warning {
+  background-color: rgba(255, 153, 0,0.05);
+  border-color: rgb(255, 153, 0);
+  color:currentColor;
+  padding: 0 auto;
+  
 }
 
 .alert-warning {
   background-color: rgba(255, 153, 0,0.25);
   border-color: rgb(255, 153, 0);
   color:currentColor;
-  font-weight: 600;
+  
+  padding: 0 auto;
 }
+
+
+
 .alert-danger {
 
   background-color: rgba(255, 56, 96,0.15);
   border-color: rgb(255, 56, 96);
   color:currentColor;
-  font-weight: 600;
+ 
+  padding: 0 auto;
+}
+
+.alert-note_danger {
+  background-color: rgba(255, 56, 96,0.15);
+  border-color: rgb(255, 56, 96);
+  color:currentColor;
+  padding: 0 auto;
+  
 }
 
 .article-style aside p,
@@ -661,9 +703,9 @@ div.alert-quotes > div {
   font-family: 'Kanit';
   font-style: italic;
   text-align: center;
-  color: #003366;
+  color: #3F69AA;
   background-color: #f9f9f9;
-  border-left: .45rem solid #003366;
+  border-left: .45rem solid #3F69AA;
  /* background: rgba(0, 51, 102, 0.075); */
 }
 
