--- a/customs/assets/scss/academic/_root.scss
+++ b/customs/assets/scss/academic/_root.scss
@@ -5,9 +5,10 @@
 html {
   font-family: $sta-font-body, sans-serif;
   font-size: #{$sta-font-size-small}px;
-  color: rgba(0,0,0,0.8);
+  color: rgba(0, 0, 0, 0.8);
   line-height: 1.65;
 }
+
 @media screen and (min-width: 58em) {
   html {
     font-size: #{$sta-font-size}px;
@@ -20,13 +21,18 @@ body {
   line-height: inherit;
   color: inherit;
   background-color: $sta-background;
-  margin-top: 70px; /* Offset body content by navbar height. */
+  margin-top: 70px;
+  /* Offset body content by navbar height. */
   padding-top: 0;
   counter-reset: captions;
 }
-@media screen and (max-width: 1200px) { /* Match max-width of .nav-bar query. */
+
+@media screen and (max-width: 1200px) {
+
+  /* Match max-width of .nav-bar query. */
   body {
-    margin-top: 50px; /* Offset body content by navbar height. */
+    margin-top: 50px;
+    /* Offset body content by navbar height. */
   }
 }
 
@@ -50,7 +56,9 @@ p {
 }
 
 /* Lists */
-ul, ol, dl {
+ul,
+ol,
+dl {
   margin-top: 0;
   margin-bottom: 1rem;
 }
@@ -64,7 +72,12 @@ ul, ol, dl {
 }
 
 /* Headings */
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: $sta-font-heading, sans-serif;
   font-weight: 400;
   margin-top: 1rem;
@@ -83,19 +96,25 @@ h1, h2, h3, h4, h5, h6 {
   -ms-hyphens: manual;
   hyphens: manual;
 }
+
 h1 {
   font-size: 1.8rem;
 }
+
 h2 {
   margin-top: 1rem;
   font-size: 1.5rem;
 }
+
 h3 {
 
   margin-top: 1.5rem;
   font-size: 1.25rem;
 }
-h4, h5, h6 {
+
+h4,
+h5,
+h6 {
 
   margin-top: 1rem;
   font-size: 1rem;
@@ -103,7 +122,7 @@ h4, h5, h6 {
 
 a,
 h3.article-title a:hover {
-  color: $sta-link;
+  color: #3F69AA;
   text-decoration: none;
   transition: color 0.6s ease;
 }
@@ -121,7 +140,7 @@ em {
 img,
 video {
 
-  max-width: 90%;
+  width: 95%;
   display: block;
 }
 
@@ -171,14 +190,16 @@ code {
 
 pre {
   margin: 0 0 1rem 0;
-  background-color: rgb(248, 248, 248); /* Match default highlight theme. */
+  background-color: rgb(248, 248, 248);
+  /* Match default highlight theme. */
   border-color: rgb(248, 248, 248);
   font-size: 0.9rem;
   border-radius: 4px;
 }
 
 pre code {
-  white-space: pre; /* Override Bootstrap to preserve line breaks in code. */
+  white-space: pre;
+  /* Override Bootstrap to preserve line breaks in code. */
   overflow-x: auto;
 }
 
@@ -194,13 +215,15 @@ blockquote {
   padding: .5rem 1rem;
   margin: .8rem 0;
   color: #7a7a7a;
-  border-left: .35rem solid #003366;
+  border-left: .35rem solid #3F69AA;
   background: rgba(0, 51, 102, 0.075);
   font-weight: bolder;
 }
+
 blockquote p:last-child {
   margin-bottom: 0;
 }
+
 @media (min-width: 30em) {
   blockquote {
     padding-right: 5rem;
@@ -216,6 +239,7 @@ blockquote p:last-child {
 .space-below {
   margin-bottom: 50px;
 }
+
 @media screen and (max-width: 768px) {
   .space-below {
     margin-bottom: 10px;
@@ -254,7 +278,8 @@ small,
 }
 
 .modal-title {
-  margin: 0; /* Override default h5 margin. */
+  margin: 0;
+  /* Override default h5 margin. */
 }
 
 .modal-content pre {
@@ -263,7 +288,7 @@ small,
 
 .modal-header {
   border: 0;
-  color: rgba(0,0,0,0.8);
+  color: rgba(0, 0, 0, 0.8);
 }
 
 .modal-footer {
@@ -307,7 +332,7 @@ a[data-fancybox] {
 /*************************************************
  *  Pager.
  **************************************************/
- .post-nav {
+.post-nav {
 
   font-size: .85rem;
   display: inline;
@@ -322,7 +347,7 @@ a[data-fancybox] {
   padding: 10px;
   float: left;
   text-align: left;
-  background: rgba(0,0,0,.05);
+  background: rgba(0, 0, 0, .05);
   border-color: rgb(200, 200, 200);
   border-radius: 4px;
 
@@ -335,7 +360,7 @@ a[data-fancybox] {
 }
 
 .post-nav-item .meta-nav {
-  color: #003366;
+  color: #3F69AA;
   font-weight: 700;
   line-height: 2;
   text-transform: uppercase;
@@ -347,11 +372,13 @@ a[data-fancybox] {
   padding: 10px;
   float: left;
 }
+
 .post-nav-item .meta-prev,
- .post-nav-item .meta-prev a {
-float: left;
+.post-nav-item .meta-prev a {
+  float: left;
 
 }
+
 .post-nav-item .meta-next,
 .post-nav-item .meta-next a {
   float: right;
@@ -377,13 +404,13 @@ footer p {
 
 site-footer,
 footer a#back_to_top i {
-  color: rgba(0,0,0,0.54);
+  color: rgba(0, 0, 0, 0.54);
 }
 
 .dark site-footer,
 .dark footer a#back_to_top i,
 .dark .docs .body-footer {
-  color: rgba(255,255,255,0.54);
+  color: rgba(255, 255, 255, 0.54);
 }
 
 /**************************************************
@@ -391,10 +418,10 @@ footer a#back_to_top i {
  **************************************************/
 
 .badge-light {
-  border: rgba(0,0,0,.68);
-/*  color: rgba(0,0,0,.68);  */
-  color: #003366;
-  background: rgba(0,0,0,.09);
+  border: rgba(0, 0, 0, .68);
+  /*  color: rgba(0,0,0,.68);  */
+  color: #3F69AA;
+  background: rgba(0, 0, 0, .09);
   font-weight: normal;
   border-radius: 3px;
   padding: 5px 10px;
@@ -402,18 +429,18 @@ footer a#back_to_top i {
   margin-bottom: 8px;
 }
 
-.article-tags > .badge-light:last-child {
+.article-tags>.badge-light:last-child {
   margin-right: 0;
 }
 
 .badge-light[href]:focus,
 .badge-light[href]:hover {
-  background: rgba(0,0,0,.1);
+  background: rgba(0, 0, 0, .1);
 }
 
 a.badge:focus,
 a.badge:hover {
-  color: rgba(0,0,0,.68);
+  color: rgba(0, 0, 0, .68);
 }
 
 .tag-cloud a {
@@ -448,17 +475,18 @@ a.badge:hover {
   font-size: .8rem;
   line-height: .5;
   border-radius: .3rem;
-  &:focus{
+
+  &:focus {
     box-shadow: none !important;
   }
 }
 
-.btn-primary{
+.btn-primary {
   color: $white;
 }
 
-.btn-outline-primary{
-  &:hover{
+.btn-outline-primary {
+  &:hover {
     color: $white;
   }
 }
@@ -480,7 +508,7 @@ a.badge:hover {
 
 .btn-primary:not(:disabled):not(.disabled).active:focus,
 .btn-primary:not(:disabled):not(.disabled):active:focus,
-.show > .btn-primary.dropdown-toggle:focus {
+.show>.btn-primary.dropdown-toggle:focus {
   box-shadow: 0 0 0 .2rem $sta-primary-light;
 }
 
@@ -498,35 +526,28 @@ table {
   font-size: 0.9rem;
 }
 
-table > thead > tr > th,
-table > tbody > tr > th,
-table > tfoot > tr > th,
-table > thead > tr > td,
-table > tbody > tr > td,
-table > tfoot > tr > td {
+table>thead>tr>th,
+table>tbody>tr>th,
+table>tfoot>tr>th,
+table>thead>tr>td,
+table>tbody>tr>td,
+table>tfoot>tr>td {
   padding: 8px;
   line-height: 1.43;
   vertical-align: middle;
   border: 1px solid #ddd;
 }
 
-table > thead > tr > th {
+table>thead>tr>th {
   vertical-align: center;
   border: 2px solid #ddd;
   background-color: #e5e5e5;
   text-align: center;
 }
 
-table > caption + thead > tr:first-child > th,
-table > colgroup + thead > tr:first-child > th,
-table > thead:first-child > tr:first-child > th,
-table > caption + thead > tr:first-child > td,
-table > colgroup + thead > tr:first-child > td,
-table > thead:first-child > tr:first-child > td {
- 
-}
 
-table > tbody + tbody {
+
+table>tbody+tbody {
   border: 2px solid #ddd;
 }
 
@@ -535,14 +556,14 @@ table table {
 }
 
 /* Table Striped */
-table > tbody > tr:nth-child(odd) > td,
-table > tbody > tr:nth-child(odd) > th {
+table>tbody>tr:nth-child(odd)>td,
+table>tbody>tr:nth-child(odd)>th {
   background-color: #f9f9f9;
 }
 
 /* Table Hover */
-table > tbody > tr:hover > td,
-table > tbody > tr:hover > th {
+table>tbody>tr:hover>td,
+table>tbody>tr:hover>th {
   background-color: #e5e5e5;
 }
 
@@ -558,7 +579,7 @@ table > tbody > tr:hover > th {
 
 /* Asides use <p> block element whereas alerts use <div>. */
 .article-style aside p,
-div.alert > div {
+div.alert>div {
   position: relative;
   display: block;
   font-size: 1rem;
@@ -569,20 +590,21 @@ div.alert > div {
 
 
 
-div.alert div > * {
-  margin-bottom: .5rem;  /* Use smaller paragraph spacing than usual. */
+div.alert div>* {
+  margin-bottom: .5rem;
+  /* Use smaller paragraph spacing than usual. */
 }
 
-div.alert div > :last-child {
+div.alert div> :last-child {
   margin-bottom: 0;
 }
 
 .article-style aside p::before,
-div.alert > div:first-child::before {
+div.alert>div:first-child::before {
   position: absolute;
-  
+
   left: -2rem;
-  
+
   width: 1.5rem;
   text-align: center;
   vertical-align: middle;
@@ -590,14 +612,15 @@ div.alert > div:first-child::before {
 
 
 
-div.alert-warning > div:first-child::before {
+div.alert-warning>div:first-child::before {
   font-family: 'Font Awesome 5 Free';
   font-size: 120%;
   font-weight: 900;
   color: orange;
   content: '\f06a';
 }
-div.alert-danger > div:first-child::before {
+
+div.alert-danger>div:first-child::before {
   font-family: 'Font Awesome 5 Free';
   font-size: 120%;
   font-weight: 900;
@@ -605,14 +628,15 @@ div.alert-danger > div:first-child::before {
   content: '\f071';
 }
 
-div.alert-success > div:first-child::before {
+div.alert-success>div:first-child::before {
   font-family: 'Font Awesome 5 Free';
   font-size: 120%;
   font-weight: 900;
   content: '\f058';
   color: green;
 }
-div.alert-info > div:first-child::before {
+
+div.alert-info>div:first-child::before {
   font-family: 'Font Awesome 5 Free';
   font-weight: 900;
   content: '\f05a';
@@ -620,56 +644,84 @@ div.alert-info > div:first-child::before {
 }
 
 
+
+
 .article-style aside a,
 div.alert a {
   color: currentColor;
   text-decoration: none;
-  border-bottom: solid 2px currentColor;
+
 }
 
 .article-style aside,
 .alert-note {
 
-  background-color:rgba(47, 101, 182, 0.05);
+  background-color: rgba(47, 101, 182, 0.05);
   border-color: rgb(63, 105, 170);
   padding: 0 auto;
 }
 
 .alert-info {
-  background-color:rgba(63, 105, 170,0.1);
+  background-color: rgba(63, 105, 170, 0.1);
   border-color: rgb(63, 105, 170);
-  color:currentColor;
+  color: currentColor;
   padding: 0 auto;
 }
+
+div.alert-note_toc {
+  background-color: rgba(255, 153, 0, 0.05);
+  border-color: rgb(255, 153, 0);
+  padding: 0 auto;
+  color: rgba(0,0,0,.8);
+  font-family: Mitr;
+  font-weight: 400;
+  font-size: 1.2rem;
+
+}
+
+div.alert-note_toc>div>ul>li>a {
+
+
+  &:hover {
+    color: $sta-primary;
+    font-weight: 600;
+  }
+  
+
+}
+
+
+
 .alert-success {
 
-  background-color: rgba(0, 128, 0,0.1);
+  background-color: rgba(0, 128, 0, 0.1);
   border-color: rgb(0, 128, 0);
   padding: 0 auto;
 
 }
 
+
 .alert-note_success {
-  background-color: rgba(0, 128, 0,0.1);
+  background-color: rgba(0, 128, 0, 0.2);
   border-color: rgb(0, 128, 0);
-  color:currentColor;
+  color: rgba(0, 0, 0, .8);
   padding: 0 auto;
-  
+
 }
 
 .alert-note_warning {
-  background-color: rgba(255, 153, 0,0.05);
+  background-color: rgba(255, 153, 0, 0.05);
   border-color: rgb(255, 153, 0);
-  color:currentColor;
+  color: currentColor;
   padding: 0 auto;
-  
+
 }
 
 .alert-warning {
-  background-color: rgba(255, 153, 0,0.25);
+  background-color: rgba(255, 153, 0, 0.25);
   border-color: rgb(255, 153, 0);
-  color:currentColor;
-  
+  color: currentColor;
+
   padding: 0 auto;
 }
 
@@ -677,27 +729,27 @@ div.alert a {
 
 .alert-danger {
 
-  background-color: rgba(255, 56, 96,0.15);
+  background-color: rgba(255, 56, 96, 0.15);
   border-color: rgb(255, 56, 96);
-  color:currentColor;
- 
+  color: currentColor;
+
   padding: 0 auto;
 }
 
 .alert-note_danger {
-  background-color: rgba(255, 56, 96,0.15);
+  background-color: rgba(255, 56, 96, 0.15);
   border-color: rgb(255, 56, 96);
-  color:currentColor;
+  color: currentColor;
   padding: 0 auto;
-  
+
 }
 
 .article-style aside p,
-div.alert-quotes > div {
+div.alert-quotes>div {
   position: relative;
-  top:-1rem;
-  margin-top:1.5rem;
-  line-height:3rem;
+  top: -1rem;
+  margin-top: 1.5rem;
+  line-height: 3rem;
   font-size: 1.5rem;
   font-weight: 500;
   font-family: 'Kanit';
@@ -706,18 +758,18 @@ div.alert-quotes > div {
   color: #3F69AA;
   background-color: #f9f9f9;
   border-left: .45rem solid #3F69AA;
- /* background: rgba(0, 51, 102, 0.075); */
+  /* background: rgba(0, 51, 102, 0.075); */
 }
 
 /* homepage */
-.hero-img{
+.hero-img {
   border: 10px solid #fff;
   box-shadow: rgba(0, 0, 0, 0.2) 0px 20px 30px 0px;
 }
 
 /* about */
-.network-icon{
-  a{
+.network-icon {
+  a {
     height: 40px;
     width: 40px;
     line-height: 40px;
@@ -726,13 +778,14 @@ div.alert-quotes > div {
     border-radius: 50%;
     background: transparent;
     transition: .3s ease;
-    &:hover{
+
+    &:hover {
       background: rgb(235, 235, 235);
     }
   }
 }
 
-.progress-bar{
+.progress-bar {
   position: absolute;
   height: 10%;
   background: $sta-primary;
@@ -741,28 +794,30 @@ div.alert-quotes > div {
   z-index: -1;
 }
 
-.card .card-text{
+.card .card-text {
   padding-left: 0 !important;
 }
 
-.section-heading h1{
+.section-heading h1 {
   position: relative;
   text-transform: uppercase;
   letter-spacing: 4px;
   display: inline-block;
   font-size: 30px;
-  &::before{
-      content: '';
-      position: absolute;
-      z-index: 99;
-      background-color: $sta-primary;
-      width: 6px;
-      height: 6px;
-      border-radius: 100%;
-      left: -17px;
-      top: 15px;
+
+  &::before {
+    content: '';
+    position: absolute;
+    z-index: 99;
+    background-color: $sta-primary;
+    width: 6px;
+    height: 6px;
+    border-radius: 100%;
+    left: -17px;
+    top: 15px;
   }
-  &::after{
+
+  &::after {
     content: '';
     position: absolute;
     z-index: 99;
@@ -775,6 +830,6 @@ div.alert-quotes > div {
   }
 }
 
-.section-heading p{
+.section-heading p {
   text-transform: uppercase;
 }
