--- a/ECS_Academia/assets/sass/academia/_content.scss
+++ b/ECS_Academia/assets/sass/academia/_content.scss
@@ -8,7 +8,7 @@ article {
 }
 
 .article-container {
-  max-width: 90%;
+  max-width: 80%;
   padding: 0 20px 0 20px;
   margin: 0 auto 0 auto;
 }
@@ -22,7 +22,7 @@ article {
 }
 
 .page-subtitle {
-  font-size: 1rem;
+  font-size: .95rem;
   color: rgba(0,0,0,.54);
   margin-bottom: 1rem;
 }
@@ -36,7 +36,7 @@ article {
 }
 
 .split-header-content {
-  max-width: 612px;
+ 
   max-width: 85%;
   padding: 60px 60px 32px 0;
   margin-left: auto;
