--- a/ECS_Academia/layouts/shortcodes/gdocs.html
+++ b/ECS_Academia/layouts/shortcodes/gdocs.html
@@ -1,3 +1,4 @@
 <div class="responsive-wrap">
-  <iframe src="{{ .Get "src" }}" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+  <iframe src="{{ .Get "src" }}" frameborder="0" width="960" height="1000" allowfullscreen="true"
+    mozallowfullscreen="true" webkitallowfullscreen="true" ></iframe>
 </div>
