--- a/ECS_Academia/layouts/shortcodes/expand.html
+++ b/ECS_Academia/layouts/shortcodes/expand.html
@@ -1,6 +1,6 @@
 <div class="book-expand">
   <label>
-    <div class="book-expand-head flex justify-between">
+    <div class="book-expand-head d-flex flex-column justify-between">
       <span>{{ default "Expand" (.Get 0) }}</span>
       <span>{{ default "↕" (.Get 1) }}</span>
     </div>
