--- a/ECS_Academia/assets/sass/custom.scss
+++ b/ECS_Academia/assets/sass/custom.scss
@@ -144,17 +144,18 @@ $hint-colors: (
   overflow: hidden;
 
   .book-expand-head {
-    background-color: $gray-200;
-    color: #3F69AA;
+    background-color: $gray-100;
+    color: rgba(0, 0, 0, 0.60);
     padding: $padding-8 $padding-16;
-    font-weight: bolder;
+    font-weight: bold;
     cursor: pointer;
-    border: $padding-1 solid #fc6f5c;
+    border: $padding-2 solid #fc6f5c;
 
     &:hover {
-      background-color: #3F69AA;
-      color: white;
-      border: $padding-1 solid #fc6f5c;
+      background-color: rgba(255, 56, 96, 0.15);
+      color: rgba(0, 0, 0, 0.70);
+      
+      
     }
   }
 
@@ -263,6 +264,16 @@ a.book-btn {
   }
 }
 
+// {{< hint >}}
+.book-hint {
+  @each $name, $color in $hint-colors {
+    &.#{$name} {
+      border-left-color: $color;
+      background-color: rgba($color, 0.1);
+      // background-color: $gray-100;
+    }
+  };
+}
 
 
 
@@ -289,5 +300,68 @@ body {
 // Future
 .book-menu nav {
   scrollbar-color: transparent $gray-500;
+}
+
+
+// Table
+
+
+table {
+  overflow: auto;
+  display: block;
+  border-spacing: 0;
+  border-collapse: collapse;
+  
+  margin-bottom: $padding-8;
+
+  tr th, tr td {
+    padding: $padding-8 $padding-8;
+    border: $padding-1 solid $gray-500;
+    
+  }
+  th {
+    background:#003366;
+    color:$gray-200 ;
+    text-align: center;
+  }
+
+  tr:nth-child(2n) {
+    background: $gray-300;
+  }
+}
+
+hr {
+  height: $padding-1;
+  border: none;
+  background: $gray-200;
+}
+
+ul, ol {
+  padding-left: $padding-16;
+}
+
+dl {
+  dt {
+    font-weight: bolder;
+    margin-top: $padding-4;
+    
+  }
+
+  dd {
+    margin-left: $padding-16 ;
+  }
+}
+
+// Special case for highlighted code with line numbers
+.highlight table tr {
+  td:nth-child(1) pre {
+    margin: 0;
+    padding-right: 0;
+    
+  }
+  td:nth-child(2) pre {
+    margin: 0;
+    padding-left: 0;
+  }
 }
 
