--- a/ECS_Academia/assets/sass/academia/_docs.scss
+++ b/ECS_Academia/assets/sass/academia/_docs.scss
@@ -96,7 +96,7 @@
 
 .docs-sidebar .nav>li>a {
   display: block;
-  padding: .25rem 1.5rem;
+  padding: .25rem .75rem;
   font-size: .8rem;
   color: rgba(0, 0, 0, .65);
   
