--- a/ECS_Academia/assets/sass/academia/_docs.scss
+++ b/ECS_Academia/assets/sass/academia/_docs.scss
@@ -96,7 +96,7 @@
 
 .docs-sidebar .nav>li>a {
   display: block;
-  padding: .25rem .75rem;
+  padding: .25rem 1rem;
   font-size: .8rem;
   color: rgba(0, 0, 0, .65);
   
@@ -178,7 +178,7 @@
 .docs-toc-link {
   display: block;
   padding-left: .5rem;
-  color: #3F69AA;
+  color: rgba(0, 0, 0, .60);
   font-size: .8rem;
 }
 
