--- a/ECS_Academia/layouts/section/docs.html
+++ b/ECS_Academia/layouts/section/docs.html
@@ -6,10 +6,10 @@
   {{ with .Content }}
   <div class="article-style" itemprop="articleBody">{{ . }}</div>
   {{ end }}
-  <ul class="list-unstyled">
+  <ul class="li_compact">
     {{ if gt (len .Sections) 0}}
     {{ range .Sections }}
-    <li class="p-4 shadow-sm mb-4 card rounded-0"><h5><a class="stretched-link" href="{{.RelPermalink}}">{{.LinkTitle}}</a></h5> {{with .Params.summary}}<p>{{. | plainify | emojify}}</p>{{end}}</li>
+    <li class="p-4 shadow-sm mb-4 card rounded-0"><h5><a class="stretched-link" href="{{.RelPermalink}}">{{.Title}}</a></h5> {{with .Params.summary}}<p>{{. | plainify | emojify}}</p>{{end}}</li>
     {{end}}
     {{end}}
   </ul>
