--- a/ECS_Academia/assets/sass/academia/_widgets.scss
+++ b/ECS_Academia/assets/sass/academia/_widgets.scss
@@ -133,6 +133,11 @@
   animation: intro 0.3s both;
   animation-delay: 0s;
   animation-delay: 0.25s;
+/* add  */
+   font-family: Kanit;
+   min-height: 45rem;
+   letter-spacing: 0.44px;
+
 }
 
 .hero-title {
