--- a/ECS_Academia/assets/sass/custom.scss
+++ b/ECS_Academia/assets/sass/custom.scss
@@ -320,7 +320,7 @@ table {
     
   }
   th {
-    background:#003366;
+    background:#3F69AA;
     color:$gray-200 ;
     text-align: center;
   }
