--- a/ECS_Academia/assets/sass/custom.scss
+++ b/ECS_Academia/assets/sass/custom.scss
@@ -134,14 +134,15 @@ $hint-colors: (
 
 // {{< expand "Label" "icon" >}}
 .book-expand {
-  margin-top: $padding-16;
-  margin-bottom: $padding-16;
-
-  border: $padding-1 solid $gray-100;
-  border-radius: $border-radius;
-
-
-  overflow: hidden;
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 90%;
+  text-align: left;
+  border: none;
+  outline: none;
+  transition: 0.4s;
 
   .book-expand-head {
     background-color: $gray-100;
@@ -160,13 +161,27 @@ $hint-colors: (
   }
 
   .book-expand-content {
-    display: none;
-    padding: $padding-16;
+    padding: 0 18px;
+    background-color: white;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
   }
 
   input[type="checkbox"]:checked+.book-expand-content {
     display: block;
   }
+}
+.book-expand:after {
+  content: '\02795'; /* Unicode character for "plus" sign (+) */
+  font-size: 13px;
+  color: #777;
+  float: right;
+  margin-left: 5px;
+}
+
+.active:after {
+  content: "\2796"; /* Unicode character for "minus" sign (-) */
 }
 
 // {{< tabs >}}
