--- a/ECS_Academia/layouts/partials/widgets/featurette.html
+++ b/ECS_Academia/layouts/partials/widgets/featurette.html
@@ -23,6 +23,7 @@
   {{ end }}
   <div class="col-lg-3 col-sm-6 mb-4 mb-lg-0">
     <div class="position-relative py-2 shadow featurette-margin">
+       {{- with .url}}<a href="{{.}}" rel="noopener">{{end -}}
       <div class="progress-bar" style="width:{{ .parcent }}"></div>
       {{ with .icon }}<div class="featurette-icon"><i class="{{ $pack }} {{ $pack_prefix }}-{{ . }}"></i></div>{{ end }}
       <h3>{{ .name | markdownify | emojify }}</h3>
